@@ -41,7 +41,7 @@ dependencies {
 }
 
 tasks.withType(JavaCompile) {
-    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
+    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector', '--enable-preview']
 }
 
 tasks.withType(org.springframework.boot.gradle.tasks.aot.ProcessAot) {
@@ -57,6 +57,7 @@ tasks.named('test') {
     jvmArgs += [
         '--add-modules', 'jdk.incubator.vector',
         '--enable-native-access=ALL-UNNAMED',
+        '--enable-preview',
         '-XX:+UnlockDiagnosticVMOptions',
         '-XX:+UnlockExperimentalVMOptions'
     ]
@@ -70,6 +71,7 @@ tasks.named('test') {
 tasks.named('bootRun') {
     jvmArgs += [
         '--add-modules', 'jdk.incubator.vector',
+        '--enable-preview',
         '--enable-native-access=ALL-UNNAMED'
     ]
 }
@@ -77,4 +79,16 @@ tasks.named('bootRun') {
 tasks.named('asciidoctor') {
     inputs.dir snippetsDir
     dependsOn test
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += ['--enable-preview']
+}
+
+tasks.named('bootRun') {
+    jvmArgs += ['--enable-preview']
 }
